[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/save_load_screen.gd" id="1_1tye3"]

[node name="SaveLoadScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1tye3")

[node name="Background" type="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.109804, 0.305882, 0.501961, 1)

[node name="PanelContainer" type="PanelContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label"]
layout_mode = 2
text = "ゲームをセーブ/ロード"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator"]
layout_mode = 2

[node name="SlotsContainer" type="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Separator2" type="HSeparator"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button"]
layout_mode = 2
size_flags_horizontal = 3
text = "戻る"

[node name="DeleteButton" type="Button"]
layout_mode = 2
size_flags_horizontal = 3
text = "削除"

[node name="ActionButton" type="Button"]
layout_mode = 2
size_flags_horizontal = 3
text = "ロード" 